# school_library_management_backend

./: README.md  pyproject.toml
app/: main.py
app/api/endpoints/: books.py  inventory.py  students.py
app/core/: config.py
app/db/: crud.py  models.py  session.py
app/dummy/: dummy_data.py
app/schemas/: book.py  inventory.py  student.py
