[tool.poetry]
name = "school-library-management-system"
version = "0.1.0"
description = ""
authors = ["Abhishek Ashish <abhishekashish2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
